--- a/HTML_CSS/CSS/Atelier 1/Index.html
+++ b/HTML_CSS/CSS/Atelier 1/Index.html
@@ -1,44 +1,64 @@
 ﻿<body>
-    <!--HEADER-->
-    <header>
-        <a href="#"><img src="img/super.png" alt="logo Super" /></a>
-        <nav>
-            <a href="#">Qui sommes-nous</a>
-            <a href="#">A propos de nous</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
-    <!--MAIN-->
-    <main>
-        <article>
-            <h2>Qui sommes-nous</h2>
-            <img src="img/equipe.png" alt="photo de l'équipe" />
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam maxime eius non dolorem nemo beatae, ea explicabo assumenda blanditiis optio quia! Culpa ipsum quos laudantium explicabo beatae minima repellendus. Qui!</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, iusto temporibus dolores praesentium dolorum distinctio quibusdam quidem nihil repellendus. Nam fugit veniam est nemo aspernatur, repellat molestiae mollitia repudiandae explicabo!</p>
-            <a href="#">Lire plus ...</a>
-        </article>
-        <div class="clear"></div>
-        <article>
-            <h2>Que faisons nous</h2>
-            <img src="img/money.png" alt="photo de l'équipe et dollars" />
-            <P>
-                <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum libero voluptas maiores vero quaerat laudantium? Quae, delectus perferendis. Incidunt soluta dolor tempora alias omnis voluptatem dolorem voluptas optio laboriosam tempore.</span>
-                <span>Molestiae alias quod voluptatibus odit aperiam voluptates optio est at dignissimos ipsa atque delectus reiciendis modi illum exercitationem soluta incidunt voluptas vitae eos sequi cum, quo accusamus consectetur. Enim, modi?</span>
-                <span>Libero illo quis laboriosam! Laborum incidunt impedit iste omnis totam officiis quae repellat exercitationem. Accusamus incidunt dolorem odit, aliquid placeat deleniti recusandae natus laborum voluptatibus sit optio eum ipsa quibusdam?</span>
 
-            </P>
-            <ul>
-                <li>Lorem ipsum dolor sit amet</li>
-                <li>Consectetur adipisicing elit</li>
-                <li>sed do eiusmod tempor incididunt</li>
-                <li>ut labore et dolore magna aliqua</li>
-                <li>sed do eiusmod tempor incididunt</li>
-                <li>ut labore et dolore magna aliqua</li>
-            </ul>
-            <a href="#">Lire plus ...</a>
-        </article>
-        <div class="clear"></div>
-    </main>
+    <head>
+        <title>Atelier 1</title>
+        <script src="https://kit.fontawesome.com/03ac4bf81a.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+    </head>
+    <!--HEADER-->
+    <div id="container">
+        <header>
+            <a href="#"><img src="img/super.png" alt="logo Super" /></a>
+            <nav>
+                <a href="#">Qui sommes-nous</a>
+                <a href="#">A propos de nous</a>
+                <a href="#">Contact</a>
+            </nav>
+        </header>
+        <!--MAIN-->
+        <main>
+            <article>
+                <h2><i class="fas fa-mask"></i> Qui sommes-nous</h2>
+                <img class="float-img" src="img/equipe.png" alt="photo de l'équipe" />
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam maxime eius non dolorem nemo beatae,
+                    ea explicabo assumenda blanditiis optio quia! Culpa ipsum quos laudantium explicabo beatae minima
+                    repellendus. Qui!</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, iusto temporibus dolores praesentium
+                    dolorum distinctio quibusdam quidem nihil repellendus. Nam fugit veniam est nemo aspernatur,
+                    repellat molestiae mollitia repudiandae explicabo!</p>
+                <a href="#">Lire plus ...</a>
+            </article>
+            <div class="clear"></div>
+            <article>
+                <h2><i class="fas fa-mask"></i> Que faisons nous</h2>
+                <img class="float-img" src="img/money.png" alt="photo de l'équipe et dollars" />
+                <P>
+                    <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum libero voluptas maiores vero
+                        quaerat laudantium? Quae, delectus perferendis. Incidunt soluta dolor tempora alias omnis
+                        voluptatem dolorem voluptas optio laboriosam tempore.</span>
+                    <span>Molestiae alias quod voluptatibus odit aperiam voluptates optio est at dignissimos ipsa atque
+                        delectus reiciendis modi illum exercitationem soluta incidunt voluptas vitae eos sequi cum, quo
+                        accusamus consectetur. Enim, modi?</span>
+                    <span>Libero illo quis laboriosam! Laborum incidunt impedit iste omnis totam officiis quae repellat
+                        exercitationem. Accusamus incidunt dolorem odit, aliquid placeat deleniti recusandae natus
+                        laborum voluptatibus sit optio eum ipsa quibusdam?</span>
+
+                </P>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet</li>
+                    <li>Consectetur adipisicing elit</li>
+                    <li>sed do eiusmod tempor incididunt</li>
+                    <li>ut labore et dolore magna aliqua</li>
+                    <li>sed do eiusmod tempor incididunt</li>
+                    <li>ut labore et dolore magna aliqua</li>
+                </ul>
+                <a href="#">Lire plus ...</a>
+                <br>
+            </article>
+            <div class="clear"></div>
+        </main>
+    </div>
     <!--FOOTER-->
     <footer>2020 - Sacha - Super</footer>
 </body>
