--- a/JQuery/Exo1/Exo1.html
+++ b/JQuery/Exo1/Exo1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Exercice 1</title>
     <!-- <script src="bib/jquery-3.4.1.js" type="text/javascript"></script> -->
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 </head>
 <body>
     <div>
@@ -26,9 +26,7 @@
     
     </div>
     
-    <script type="text/javascript"> 
-       // TODO : appels à jQuery
-    </script>
+    <script src="script.js"></script>
 
 </body>
 </html>
