AJAX + API files

--- a/Javascript_Object/Exo1/index.html
+++ b/Javascript_Object/Exo1/index.html
@@ -19,7 +19,7 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
-    <form action="" method="get" class="form-example">
+    <form action="" method="get" class="form-example" id="form-example">
       <div class="form-example">
         <label for="name">Enter your name: </label>
         <input type="text" name="name" id="name" required />
@@ -37,7 +37,7 @@
         <input type="email" name="email" id="email" required />
       </div>
       <div class="form-example">
-        <input type="submit" value="Subscribe!" />
+        <input type="submit" id="submitbtn" value="Subscribe!" />
       </div>
     </form>
     <script
