--- a/Javascript_API/Client/index.html
+++ b/Javascript_API/Client/index.html
@@ -23,7 +23,7 @@
     ></script>
   </head>
   <body>
-    <form class="container" name="form" action="">
+    <form class="container" id="userForm">
       <div class="col-md-5 mr-auto my-2">
         <input
           id="name"
@@ -67,7 +67,7 @@
             <div class="col-md-5 mr-auto my-2">
         <input
           id="street"
-          name="address[street]"
+          name="street"
           type="text"
           class="form-control"
           placeholder="Street"
@@ -77,7 +77,7 @@
             <div class="col-md-5 mr-auto my-2">
         <input
           id="suite"
-          name="address[suite]"
+          name="suite"
           type="text"
           class="form-control"
           placeholder="Street 2"
@@ -85,18 +85,18 @@
         />
       </div>
       <div class="row">
-            <div class="col-md-5 mr-auto my-2">
+            <div class="col-md-2 my-2">
         <input
           id="zipCode"
-          name="address[zipCode]"
+          name="zipCode"
           type="text"
           class="form-control"
           placeholder="Zip Code"
           autocomplete="off"
         />
       </div>
-            <div class="col-md-5 mr-auto my-2">
-<select id="city" name="address[city]" class="form-select">
+            <div class="col-md-3 ml-3 mr-auto my-2">
+<select id="city" name="city" class="form-select">
 </select>
             </div>
           </div>
@@ -110,18 +110,20 @@
           autocomplete="off"
         />
       </div>
-      <div class="col-md-5 mr-auto my-2">
-            <input type="file" name="files" id="btnFiles" multiple>
-            <div id="previewFiles"></div>
-        </div>
-        <div class="col-md-5 mr-auto my-2">
-            <input type="submit" value="ok" id="btn_submit">
+
+        <div class="col-md-8 ml-auto mr-auto my-2">
+            <input type="submit" value="Submit" id="btn_submit">
         </div>
         <div class="map" id="map"></div>
     </form>
+    <form class="container" id="imgForm">
+            <div class="col-md-5 mr-auto my-2">
+            <input type="file" name="files" id="btnFiles" multiple>
+            <div id="previewFiles"></div>
+        </div>
+    </form>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.serializeJSON/3.2.1/jquery.serializejson.min.js"></script>
     <script src="scripts/script.js"></script>
   </body>
 </html>
